Added instance recovery test